// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingDataloaderService > load > should load many 1`] = `
[
  {
    "where": {
      "name": {
        "in": [
          "123",
          "321",
        ],
      },
    },
  },
]
`;

exports[`SettingDataloaderService > load > should load one 1`] = `
[
  {
    "where": {
      "name": {
        "in": [
          "123",
        ],
      },
    },
  },
]
`;

exports[`SettingDataloaderService > should prime 1`] = `
[
  "123",
  {},
]
`;

exports[`SettingDataloaderService load should load many 1`] = `
[
  {
    "where": {
      "name": {
        "in": [
          "123",
          "321",
        ],
      },
    },
  },
]
`;

exports[`SettingDataloaderService load should load one 1`] = `
[
  {
    "where": {
      "name": {
        "in": [
          "123",
        ],
      },
    },
  },
]
`;

exports[`SettingDataloaderService should prime 1`] = `
[
  "123",
  {},
]
`;
